| Summary: | ASTERISK-28624: res_pjsip_outbound_registration: add SRV failover | ||||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |||
| Date Opened: | 2019-11-20 12:56:44.000-0600 | Date Closed: | 2019-12-06 09:23:30.000-0600 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Resources/res_pjsip_outbound_registration | ||
| Versions: | GIT 16.6.1 17.0.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Add SRV failover for outbound registration. | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2019-12-06 09:23:32.741-0600 Change 13228 merged by Friendly Automation: res_pjsip_outbound_registration: add support for SRV failover [https://gerrit.asterisk.org/c/asterisk/+/13228|https://gerrit.asterisk.org/c/asterisk/+/13228] By: Friendly Automation (friendly-automation) 2019-12-06 09:33:34.436-0600 Change 13269 merged by Friendly Automation: res_pjsip_outbound_registration: add support for SRV failover [https://gerrit.asterisk.org/c/asterisk/+/13269|https://gerrit.asterisk.org/c/asterisk/+/13269] By: Friendly Automation (friendly-automation) 2019-12-06 09:38:59.479-0600 Change 13268 merged by Friendly Automation: res_pjsip_outbound_registration: add support for SRV failover [https://gerrit.asterisk.org/c/asterisk/+/13268|https://gerrit.asterisk.org/c/asterisk/+/13268] By: Friendly Automation (friendly-automation) 2019-12-06 12:45:06.411-0600 Change 13272 merged by George Joseph: res_pjsip_outbound_registration: add support for SRV failover [https://gerrit.asterisk.org/c/asterisk/+/13272|https://gerrit.asterisk.org/c/asterisk/+/13272] | ||||