res_pjsip_outbound_registration: add support for SRV failover

ASTERISK-28624

Change-Id: I8da7c300dd985ab7b10dbd5194aff2f737808561